--- a/scripts/tictac.css
+++ b/scripts/tictac.css
@@ -9,8 +9,8 @@
 
 .mytable {
   /* align-items: center; */
-  width:30vw;
-  height: 30vh;
+/*   width:30vw; */
+/*   height: 30vh; */
   /* outline: 2px solid yellow; */
 }
 
