--- a/scripts/tictac.css
+++ b/scripts/tictac.css
@@ -17,10 +17,10 @@
 
 
 td {
-  border-radius: 50px;
-  background: #e0e0e0;
-  box-shadow:  20px 20px 40px #7d7d7d,
-               -20px -20px 40px #ffffff;
+  border-radius: 17px;
+  background: #b4a2a2;
+  box-shadow:  23px 23px 47px #655b5b,
+             -23px -23px 47px #ffe9e9;
 
                color: blue;
                text-align: center;
