--- a/scripts/tictac.css
+++ b/scripts/tictac.css
@@ -18,9 +18,9 @@
 
 td {
   border-radius: 17px;
-  background: #b4a2a2;
-  box-shadow:  23px 23px 47px #655b5b,
-             -23px -23px 47px #ffe9e9;
+background: #131111;
+box-shadow:  23px 23px 47px #0b0a0a,
+             -23px -23px 47px #1b1818;
 
                color: blue;
                text-align: center;
