--- a/scripts/tictac.css
+++ b/scripts/tictac.css
@@ -17,10 +17,10 @@
 
 
 td {
- border-radius: 17px;
-background: #fafafa;
-box-shadow:  23px 23px 64px #646464,
-             -23px -23px 64px #ffffff;
+ border-radius: 21px;
+background: linear-gradient(145deg, #ffffff, #e1e1e1);
+box-shadow:  21px 21px 54px #676767,
+             -21px -21px 54px #ffffff;
 
                color: blue;
                text-align: center;
