--- a/scripts/tictac.css
+++ b/scripts/tictac.css
@@ -17,10 +17,10 @@
 
 
 td {
- border-radius: 21px;
-background: linear-gradient(145deg, #ffffff, #e1e1e1);
-box-shadow:  21px 21px 54px #676767,
-             -21px -21px 54px #ffffff;
+   border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow:  20px 20px 40px #7d7d7d,
+               -20px -20px 40px #ffffff;
 
                color: blue;
                text-align: center;
